--- a/default/home/babak/.config/i3/config
+++ b/default/home/babak/.config/i3/config
@@ -122,9 +122,9 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:shell"
-set $ws2 "2:chrome"
-set $ws3 "3:vscode"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -136,8 +136,8 @@ set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
+bindsym $mod+2 workspace number $ws2; layout tabbed
+bindsym $mod+3 workspace number $ws3; layout tabbed
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
@@ -201,7 +201,7 @@ bindsym $mod+m move workspace to output left
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	strip_workspace_numbers yes
+	strip_workspace_numbers no 
         status_command i3status
         colors {
                 background #1F2D3A
@@ -238,3 +238,14 @@ bindsym $mod+z exec --no-startup-id ./.screenlayout/default.sh
 bindsym $mod+x exec --no-startup-id ./.screenlayout/home-single.sh
 bindsym $mod+Shift+x exec --no-startup-id ./.screenlayout/home.sh
 bindsym $mod+c exec --no-startup-id ./.screenlayout/cafebazaar.sh
+
+assign [class="firefox"] $ws2
+assign [class="chrome"] $ws2
+assign [class="Code"] $ws3
+assign [class="Code - Insiders"] $ws3
+
+exec google-chrome
+exec code-insiders
+exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
+exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
+
