🔨 Disable i3 move focus with mouse
Signed-off-by: Babak K. Shandiz <babak.k.shandiz@gmail.com>

--- a/default/home/babak/.config/i3/config
+++ b/default/home/babak/.config/i3/config
@@ -249,3 +249,5 @@ exec code-insiders
 exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 
+focus_follows_mouse no
+
