--- a/default/home/babak/.config/i3/config
+++ b/default/home/babak/.config/i3/config
@@ -250,4 +250,5 @@ exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 
 focus_follows_mouse no
+bindsym $mod+b workspace back_and_forth
 
