--- a/default/home/babak/.config/i3status/config
+++ b/default/home/babak/.config/i3status/config
@@ -11,21 +11,22 @@ order += "path_exists VPN"
 order += "wireless wlp0s20f3"
 order += "ethernet enp0s31f6"
 order += "battery 0"
-order += "cpu_temperature 0"
+#order += "cpu_temperature 0"
 order += "memory"
 order += "load"
 order += "tztime local"
 order += "tztime tehran"
+
 wireless wlp0s20f3 {
-        format_up = "W: (%quality at %essid, %bitrate) %ip"
-        format_down = "W:⛔"
+        format_up = "W:(%quality at %essid, %bitrate) %ip"
+        format_down = "W:-"
 }
 ethernet enp0s31f6 {
-        format_up = "E: %ip (%speed)"
-        format_down = "E:⛔"
+        format_up = "E:%ip (%speed)"
+        format_down = "E:-"
 }
 battery 0 {
-        format = "%status %percentage %remaining %emptytime"
+        format = "%status%percentage %remaining %emptytime"
 	integer_battery_capacity = true
         format_down = "No battery"
         status_chr = "⚡"
@@ -47,7 +48,7 @@ run_watch VPNC {
 path_exists VPN {
         # path exists when a VPN tunnel launched by nmcli/nm-applet is active
         path = "/proc/sys/net/ipv4/conf/tun0"
-	format_down = "VPN:⛔"
+	format_down = "VPN:-"
 }
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
