--- a/default/home/babak/.config/i3/config
+++ b/default/home/babak/.config/i3/config
@@ -245,10 +245,28 @@ assign [class="Code"] $ws3
 assign [class="Code - Insiders"] $ws3
 
 exec google-chrome
-exec code-insiders
+exec code
 exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal'
 
 focus_follows_mouse no
 bindsym $mod+b workspace back_and_forth
 
+bindsym $mod+shift+m mode "move" focus floating
+mode "move" {
+    bindsym $mod+Tab focus right
+
+    bindsym Left  move left
+    bindsym Down  move down
+    bindsym Up    move up
+    bindsym Right move right
+
+    bindsym h     move left
+    bindsym j     move down
+    bindsym k     move up
+    bindsym l     move right
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
