--- a/default/home/babak/.config/i3/config
+++ b/default/home/babak/.config/i3/config
@@ -237,7 +237,7 @@ exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
 bindsym $mod+z exec --no-startup-id ./.screenlayout/default.sh
 bindsym $mod+x exec --no-startup-id ./.screenlayout/home-single.sh
 bindsym $mod+Shift+x exec --no-startup-id ./.screenlayout/home.sh
-bindsym $mod+c exec --no-startup-id ./.screenlayout/cafebazaar.sh
+bindsym $mod+c exec --no-startup-id ./.screenlayout/home-2.sh
 
 assign [class="firefox"] $ws2
 assign [class="chrome"] $ws2
